--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     <img src="./src/assets/logo.png" alt="logo da aplicação">
     <button class="btn-enter"></button>
     <button class="btn-enter" disabled></button>
+
+    <div class="input-wrapper">
+        <input class="text-input text-md" value="" type="text" placeholder="ID do cartão">
+        <button class="btn-enter"></button>
+    </div>
 </body>
 </html>
