--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Member's Club</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Member's Club</title>
 
-    <link rel="stylesheet" href="/src/styles/index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/src/styles/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
-<body>
-    <img src="./src/assets/logo.png" alt="logo da aplicação">
-    <button class="btn-enter"></button>
-    <button class="btn-enter" disabled></button>
 
-    <div class="input-wrapper">
+<body>
+  <section id="hero">
+    <div class="search-field">
+      <img class="logo" src="./src/assets/logo.png" alt="logo da aplicação">
+
+      <div class="input-wrapper">
         <input class="text-input text-md" value="" type="text" placeholder="ID do cartão">
         <button class="btn-enter"></button>
+      </div>
     </div>
+  </section>
+
+  <div class="content">
+    <section id="profile">
+      profile
+    </section>
+
+    <section id="loyalty">
+      loyalty
+    </section>
+
+    <section id="rewards">
+      rewards
+    </section>
+
+    <section id="history">
+      history
+    </section>
+  </div>
+
 </body>
+
 </html>
