--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
     </div>
   </section>
 
-  <div class="content">
+  <main class="content">
     <section id="profile">
-      profile
+      <div class="profile-picture">
+        <img src="/src/assets/icons/profile.jpg" alt="sem imagem de perfil">
+      </div>
+      <div class="profile-details">
+        <strong class="title-sm">Natália Miranda</strong>
+        <span class="text-xs">Cliente desde 18/09/20</span>
+      </div>
     </section>
 
     <section id="loyalty">
@@ -40,7 +46,7 @@
     <section id="history">
       history
     </section>
-  </div>
+  </main>
 
 </body>
 
