loyalty-card section

--- a/index.html
+++ b/index.html
@@ -30,13 +30,37 @@
         <img src="/src/assets/icons/profile.jpg" alt="sem imagem de perfil">
       </div>
       <div class="profile-details">
-        <strong class="title-sm">Natália Miranda</strong>
-        <span class="text-xs">Cliente desde 18/09/20</span>
+        <strong class="title-sm block gray-600">Natália Miranda</strong>
+        <p class="text-xs gray-500">Cliente desde 18/09/20</p>
       </div>
     </section>
 
     <section id="loyalty">
-      loyalty
+      <div class="flex space-between">
+        <div>
+          <h2 class="subtitle-sm gray-500">
+            cartão fidelidade
+          </h2>
+          <p class="subtitle text-xs gray-500">
+            Ao fazer cortes de cabelo, o décimo sai de graça!
+          </p>
+        </div>
+        <div class="id">
+          ID: 234-234-234-234
+        </div>
+      </div>
+      <div class="loyalty-checks">
+        <div class="check-card checked"></div>
+        <div class="check-card checked"></div>
+        <div class="check-card checked"></div>
+        <div class="check-card checked"></div>
+        <div class="check-card checked"></div>
+        <div class="check-card checked"></div>
+        <div class="check-card checked"></div>
+        <div class="check-card"></div>
+        <div class="check-card"></div>
+        <div class="check-card gift"></div>
+      </div>
     </section>
 
     <section id="rewards">
