--- a/index.html
+++ b/index.html
@@ -64,11 +64,109 @@
     </section>
 
     <section id="rewards">
-      rewards
+      <div class="rewards-status gray-500">
+        <div class="rewards-call">
+          <strong class="gray-600">3</strong> cortes restantes
+        </div>
+        <div class="rewards-progress">
+          <div class="bar-background">
+            <div class="bar-progress" style="width: 70%;"></div>
+          </div>
+          <div class="coutdown text-xs">7 de 10</div>
+        </div>
+      </div>
+      <div class="reward-gift"></div>
     </section>
 
     <section id="history">
-      history
+      <header class="gray-500">
+        <div class="subtitle-sm">Histórico</div>
+        <div class="text-xs">7 cortes</div>
+      </header>
+      <div class="history-logs">
+        <div class="empty-history text-xs gray-500">
+          Nenhum registro
+        </div>
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+
+        <div class="log-card">
+          <div class="time-mark">
+            <div class="subtitle-sm gray-600">29/04/2024</div>
+            <div class="text-xs gray-500">18:30</div>
+          </div>
+          <div class="check-icon"></div>
+        </div>
+      </div>
     </section>
   </main>
 
