--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
   <section id="hero">
     <div class="search-field">
       <img class="logo" src="./src/assets/logo.png" alt="logo da aplicação">
-
-      <div class="input-wrapper">
-        <input class="text-input text-md" value="" type="text" placeholder="ID do cartão">
-        <button class="btn-enter"></button>
-      </div>
+      <form id="search-form">
+        <div class="input-wrapper">
+          <input id="search-id" class="text-input text-md" type="text" required  pattern="\d{3}-\d{3}-\d{3}-\d{3}" autocomplete="off" placeholder="ID do cartão">
+          <button id="search-id-button" class="btn-enter"></button>
+        </div>
+      </form>
     </div>
   </section>
 
@@ -30,8 +31,8 @@
         <img src="/src/assets/icons/profile.jpg" alt="sem imagem de perfil">
       </div>
       <div class="profile-details">
-        <strong class="title-sm block gray-600">Natália Miranda</strong>
-        <p class="text-xs gray-500">Cliente desde 18/09/20</p>
+        <strong id="name" class="title-sm block gray-600">Nome do cliente</strong>
+        <p id="since" class="text-xs gray-500">Cliente desde XX/XX/XXXX</p>
       </div>
     </section>
 
@@ -45,18 +46,18 @@
             Ao fazer cortes de cabelo, o décimo sai de graça!
           </p>
         </div>
-        <div class="id">
-          ID: 234-234-234-234
+        <div id="id-label" class="id">
+          ID: XXX-XXX-XXX-XXX
         </div>
       </div>
-      <div class="loyalty-checks">
-        <div class="check-card checked"></div>
-        <div class="check-card checked"></div>
-        <div class="check-card checked"></div>
-        <div class="check-card checked"></div>
-        <div class="check-card checked"></div>
-        <div class="check-card checked"></div>
-        <div class="check-card checked"></div>
+      <div id="loyalty-checks" class="loyalty-checks">
+        <div class="check-card"></div>
+        <div class="check-card"></div>
+        <div class="check-card"></div>
+        <div class="check-card"></div>
+        <div class="check-card"></div>
+        <div class="check-card"></div>
+        <div class="check-card"></div>
         <div class="check-card"></div>
         <div class="check-card"></div>
         <div class="check-card gift"></div>
@@ -66,13 +67,13 @@
     <section id="rewards">
       <div class="rewards-status gray-500">
         <div class="rewards-call">
-          <strong class="gray-600">3</strong> cortes restantes
+          <strong class="gray-600">10</strong> cortes restantes
         </div>
         <div class="rewards-progress">
           <div class="bar-background">
-            <div class="bar-progress" style="width: 70%;"></div>
+            <div class="bar-progress" style="width: 0%;"></div>
           </div>
-          <div class="coutdown text-xs">7 de 10</div>
+          <div class="coutdown text-xs">0 de 10</div>
         </div>
       </div>
       <div class="reward-gift"></div>
@@ -81,12 +82,13 @@
     <section id="history">
       <header class="gray-500">
         <div class="subtitle-sm">Histórico</div>
-        <div class="text-xs">7 cortes</div>
+        <div id="history-total" class="text-xs">0 cortes</div>
       </header>
-      <div class="history-logs">
-        <div class="empty-history text-xs gray-500">
+      <div id="history-logs" class="history-logs">
+        <div id="empty-history" class="empty-history text-xs gray-500">
           Nenhum registro
         </div>
+        <!-- log-card example
         <div class="log-card">
           <div class="time-mark">
             <div class="subtitle-sm gray-600">29/04/2024</div>
@@ -94,78 +96,7 @@
           </div>
           <div class="check-icon"></div>
         </div>
-
-        <div class="log-card">
-          <div class="time-mark">
-            <div class="subtitle-sm gray-600">29/04/2024</div>
-            <div class="text-xs gray-500">18:30</div>
-          </div>
-          <div class="check-icon"></div>
-        </div>
-
-        <div class="log-card">
-          <div class="time-mark">
-            <div class="subtitle-sm gray-600">29/04/2024</div>
-            <div class="text-xs gray-500">18:30</div>
-          </div>
-          <div class="check-icon"></div>
-        </div>
-
-        <div class="log-card">
-          <div class="time-mark">
-            <div class="subtitle-sm gray-600">29/04/2024</div>
-            <div class="text-xs gray-500">18:30</div>
-          </div>
-          <div class="check-icon"></div>
-        </div>
-
-        <div class="log-card">
-          <div class="time-mark">
-            <div class="subtitle-sm gray-600">29/04/2024</div>
-            <div class="text-xs gray-500">18:30</div>
-          </div>
-          <div class="check-icon"></div>
-        </div>
-
-        <div class="log-card">
-          <div class="time-mark">
-            <div class="subtitle-sm gray-600">29/04/2024</div>
-            <div class="text-xs gray-500">18:30</div>
-          </div>
-          <div class="check-icon"></div>
-        </div>
-
-        <div class="log-card">
-          <div class="time-mark">
-            <div class="subtitle-sm gray-600">29/04/2024</div>
-            <div class="text-xs gray-500">18:30</div>
-          </div>
-          <div class="check-icon"></div>
-        </div>
-
-        <div class="log-card">
-          <div class="time-mark">
-            <div class="subtitle-sm gray-600">29/04/2024</div>
-            <div class="text-xs gray-500">18:30</div>
-          </div>
-          <div class="check-icon"></div>
-        </div>
-
-        <div class="log-card">
-          <div class="time-mark">
-            <div class="subtitle-sm gray-600">29/04/2024</div>
-            <div class="text-xs gray-500">18:30</div>
-          </div>
-          <div class="check-icon"></div>
-        </div>
-
-        <div class="log-card">
-          <div class="time-mark">
-            <div class="subtitle-sm gray-600">29/04/2024</div>
-            <div class="text-xs gray-500">18:30</div>
-          </div>
-          <div class="check-icon"></div>
-        </div>
+        -->
       </div>
     </section>
   </main>
