fix profile format

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <main class="content">
     <section id="profile">
       <div class="profile-picture">
-        <img src="/src/assets/icons/profile.jpg" alt="sem imagem de perfil">
+        <img src="/src/assets/icons/profile.png" alt="sem imagem de perfil">
       </div>
       <div class="profile-details">
         <strong id="name" class="title-sm block gray-600">Nome do cliente</strong>
